# python_project_template

./: Dockerfile  README.md  docker-compose.development.yml  docker-compose.production.yml  pyproject.toml
src/PROJECT_NAME/: helper.py  main.py
