[tool.poetry]
name = "PROJECT_NAME"
version = "0.1.0"
description = ""
authors = ["PROJECT_OWNER"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
# scriptname = "PROJECT_NAME.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
